--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   ],
   "author": "Americo lbuquerque",
   "license": "ISC",
+  "dependencies": {
+    "gl-matrix": "^3.2.1"
+  },
   "devDependencies": {
+    "chalk": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "figlet": "^1.3.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.0.3",
+    "node-sass": "^4.13.1",
+    "resolve-url-loader": "^3.1.1",
+    "sass-loader": "^8.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
-  },
-  "dependencies": {
-    "gl-matrix": "^3.2.1"
   }
 }
