--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "tap": "tap",
+    "test": "cd tests && tap test.js",
+    "build": "webpack-cli",
     "dev": "webpack-dev-server"
   },
   "keywords": [
@@ -15,7 +16,8 @@
   "author": "Americo lbuquerque",
   "license": "ISC",
   "dependencies": {
-    "gl-matrix": "^3.2.1"
+    "gl-matrix": "^3.2.1",
+    "jquery": "^3.5.0"
   },
   "devDependencies": {
     "chalk": "^4.0.0",
@@ -23,6 +25,7 @@
     "figlet": "^1.3.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.0.3",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^8.0.2",
