--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "gl-matrix": "^3.2.1",
-    "jquery": "^3.5.0"
+    "jquery": "^3.5.0",
+    "underscore": "^1.10.2"
   },
   "devDependencies": {
     "chalk": "^4.0.0",
@@ -29,6 +30,8 @@
     "node-sass": "^4.13.1",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^8.0.2",
+    "sinon": "^9.0.2",
+    "tap": "^14.10.7",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
